--- a/style/styles.scss
+++ b/style/styles.scss
@@ -1,6 +1,7 @@
 @import "scss/variables";
 @import "scss/font";
 @import "scss/layout";
+@import "scss/spacing-mixins";
 @import "scss/spacing";
 @import "scss/colors";
 @import "scss/widths";
