--- a/style/scss/spacing.scss
+++ b/style/scss/spacing.scss
@@ -1,285 +1,21 @@
+@import "spacing-mixins";
 // Gap
 
 .g{
-    &-xxxs{
-        gap: $xxxs; 
-        &-xxxs{
-            gap: $xxxs  $xxxs; 
-        }
-        &-xxs{
-            gap: $xxxs  $xxs; 
-        }
-        &-xs{
-            gap: $xxxs  $xs; 
-        }
-        &-s{
-            gap: $xxxs  $s; 
-        }
-        &-m{
-            gap: $xxxs  $m; 
-        }
-        &-l{
-            gap: $xxxs  $l; 
-        }
-        &-xl{
-            gap: $xxxs  $xl; 
-        }
-        &-xxl{
-            gap: $xxxs  $xxl; 
-        }
-        &-xxxl{
-            gap: $xxxs  $xxxl; 
-        }
-    }
-    &-xxs{
-        gap: $xxs; 
-        &-xxxs{
-            gap: $xxs  $xxxs; 
-        }
-        &-xxs{
-            gap: $xxs  $xxs; 
-        }
-        &-xs{
-            gap: $xxs  $xs; 
-        }
-        &-s{
-            gap: $xxs  $s; 
-        }
-        &-m{
-            gap: $xxs  $m; 
-        }
-        &-l{
-            gap: $xxs  $l; 
-        }
-        &-xl{
-            gap: $xxs  $xl; 
-        }
-        &-xxl{
-            gap: $xxs  $xxl; 
-        }
-        &-xxxl{
-            gap: $xxs  $xxxl; 
-        }
-    }
-    &-xs{
-        gap: $xs; 
-        &-xxxs{
-            gap: $xs  $xxxs; 
-        }
-        &-xxs{
-            gap: $xs  $xxs; 
-        }
-        &-xs{
-            gap: $xs  $xs; 
-        }
-        &-s{
-            gap: $xs  $s; 
-        }
-        &-m{
-            gap: $xs  $m; 
-        }
-        &-l{
-            gap: $xs  $l; 
-        }
-        &-xl{
-            gap: $xs  $xl; 
-        }
-        &-xxl{
-            gap: $xs  $xxl; 
-        }
-        &-xxxl{
-            gap: $xs  $xxxl; 
-        }
-    }
-    &-s{
-        gap: $s; 
-        &-xxxs{
-            gap: $s $xxxs; 
-        }
-        &-xxs{
-            gap: $s $xxs; 
-        }
-        &-xs{
-            gap: $s $xs; 
-        }
-        &-s{
-            gap: $s $s; 
-        }
-        &-m{
-            gap: $s $m; 
-        }
-        &-l{
-            gap: $s $l; 
-        }
-        &-xl{
-            gap: $s $xl; 
-        }
-        &-xxl{
-            gap: $s $xxl; 
-        }
-        &-xxxl{
-            gap: $s $xxxl; 
-        }
-    }
-    &-m{
-        gap: $m; 
-        &-xxxs{
-            gap: $m $xxxs; 
-        }
-        &-xxs{
-            gap: $m $xxs; 
-        }
-        &-xs{
-            gap: $m $xs; 
-        }
-        &-s{
-            gap: $m $s; 
-        }
-        &-m{
-            gap: $m $m; 
-        }
-        &-l{
-            gap: $m $l; 
-        }
-        &-xl{
-            gap: $m $xl; 
-        }
-        &-xxl{
-            gap: $m $xxl; 
-        }
-        &-xxxl{
-            gap: $m $xxxl; 
-        }
-    }
-    &-l{
-        gap: $l; 
-        &-xxxs{
-            gap: $l $xxxs; 
-        }
-        &-xxs{
-            gap: $l $xxs; 
-        }
-        &-xs{
-            gap: $l $xs; 
-        }
-        &-s{
-            gap: $l $s; 
-        }
-        &-m{
-            gap: $l $m; 
-        }
-        &-l{
-            gap: $l $l; 
-        }
-        &-xl{
-            gap: $l $xl; 
-        }
-        &-xxl{
-            gap: $l $xxl; 
-        }
-        &-xxxl{
-            gap: $l $xxxl; 
-        }
-    }
-    &-xl{
-        gap: $xl; 
-        &-xxxs{
-            gap: $xl $xxxs; 
-        }
-        &-xxs{
-            gap: $xl $xxs; 
-        }
-        &-xs{
-            gap: $xl $xs; 
-        }
-        &-s{
-            gap: $xl $s; 
-        }
-        &-m{
-            gap: $xl $m; 
-        }
-        &-l{
-            gap: $xl $l; 
-        }
-        &-xl{
-            gap: $xl $xl; 
-        }
-        &-xxl{
-            gap: $xl $xxl; 
-        }
-        &-xxxl{
-            gap: $xl $xxxl; 
-        }
-    }
-    &-xxl{
-        gap: $xxl; 
-        &-xxxs{
-            gap: $xxl $xxxs; 
-        }
-        &-xxs{
-            gap: $xxl $xxs; 
-        }
-        &-xs{
-            gap: $xxl $xs; 
-        }
-        &-s{
-            gap: $xxl $s; 
-        }
-        &-m{
-            gap: $xxl $m; 
-        }
-        &-l{
-            gap: $xxl $l; 
-        }
-        &-xl{
-            gap: $xxl $xl; 
-        }
-        &-xxl{
-            gap: $xxl $xxl; 
-        }
-        &-xxxl{
-            gap: $xxl $xxxl; 
-        }
-    }
-    &-xxxl{
-        gap: $xxxl; 
-        &-xxxs{
-            gap: $xxxl $xxxs; 
-        }
-        &-xxs{
-            gap: $xxxl $xxs; 
-        }
-        &-xs{
-            gap: $xxxl $xs; 
-        }
-        &-s{
-            gap: $xxxl $s; 
-        }
-        &-m{
-            gap: $xxxl $m; 
-        }
-        &-l{
-            gap: $xxxl $l; 
-        }
-        &-xl{
-            gap: $xxxl $xl; 
-        }
-        &-xxl{
-            gap: $xxxl $xxl; 
-        }
-        &-xxxl{
-            gap: $xxxl $xxxl; 
-        }
-    }
+    @include gap;
 }
 
-// Padding-[size]-[x,y] = p-size-xy
-// values | "" = all, t = top, r = right, b = bottom, l = left,
-
+// Padding-[size-x, size-y]-[position-x, position-y] = p-size-position
+// size | xxxs, xxs, xs, s, m, l, xl, xxl, xxxl
+// position | "" = all, t = top, r = right, b = bottom, l = left, tl = top left, bl = bottom left, rl= right left
 
 .p{
     @include spacing('padding');
 }
+
+// Margin-[size-x, size-y]-[position-x, position-y] = m-size-position
+// size | xxxs, xxs, xs, s, m, l, xl, xxl, xxxl
+// position | "" = all, t = top, r = right, b = bottom, l = left, tl = top left, bl = bottom left, rl= right left
 
 .m{
     @include spacing('margin');
