--- a/style/scss/layout.scss
+++ b/style/scss/layout.scss
@@ -10,88 +10,21 @@ ingrid, .ingrid{
     padding-right:20px
 }
 
-// Flex
+// Flex l = Layout
 
-.f-row{
-    display: flex;
-    flex-direction: row;
-    width: 100%;
-    &-r{
-        display: flex;
-        flex-direction: row-reverse;
-    }
-    &-1{
-        display: flex;
-        flex-direction: row;
-        flex: 1;
-    }
-    &-2{
-        display: flex;
-        flex-direction: row;
-        flex: 2;
-    }
-    &-3{
-        display: flex;
-        flex-direction: row;
-        flex: 3;
-    }
-    &-4{
-        display: flex;
-        flex-direction: row;
-        flex: 4;
-    }
-    &-5{
-        display: flex;
-        flex-direction: row;
-        flex: 5;
-    }
-    &-6{
-        display: flex;
-        flex-direction: row;
-        flex: 6;
-    }
+@import "layout-mixins";
+
+.l-row{
+    @include layout(row);
 }
 
-.f-col{
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    &-r{
-        display: flex;
-        flex-direction: column-reverse;
-    }
-    &-1{
-        display: flex;
-        flex-direction: column;
-        flex: 1;
-    }
-    &-2{
-        display: flex;
-        flex-direction: column;
-        flex: 2;
-    }
-    &-3{
-        display: flex;
-        flex-direction: column;
-        flex: 3;
-    }
-    &-4{
-        display: flex;
-        flex-direction: column;
-        flex: 4;
-    }
-    &-5{
-        display: flex;
-        flex-direction: column;
-        flex: 5;
-    }
-    &-6{
-        display: flex;
-        flex-direction: column;
-        flex: 6;
-    }
+.l-col{
+    @include layout(column);
 }
 
+.l-grid{
+    @include layout-grid;
+}
 
 // Align (x,y)
 // First value X axis | l = left, c= center, r = right
@@ -173,309 +106,3 @@ ingrid, .ingrid{
     }
 }
 
-.grid{
-    &-1{
-        flex-wrap: wrap;
-        > div{
-            flex: 1 0 100%;
-            max-width: 100%;
-        }
-    }
-    &-2{
-        flex-wrap: wrap;
-        > div{
-            flex: 1 0 50%;
-            max-width: 50%;
-        }
-    }
-    &-3 {
-        flex-wrap: wrap;
-        > div{
-            flex: 1 0 33.33%;
-            max-width: 33.3%;
-        }
-    }
-    &-4 {
-        flex-wrap: wrap;
-        > div{
-            flex: 1 0 25%;
-            max-width: 25%;
-        }
-    }
-    &-5 {
-        flex-wrap: wrap;
-        > div{
-            flex: 1 0 20%;
-            max-width: 20%;
-        }
-    }
-    &-6 {
-        flex-wrap: wrap;
-        > div{
-            flex: 1 0 16.66%;
-            max-width: 16.66%;
-        }
-    }
-}
-
-g-xxxs{
-    .grid{
-        &-2{
-            flex: 1 0 50%;
-            max-width: calc(50% - ($xxxs / 2));
-        }
-        &-3{
-    
-            flex: 1 0 33.33%;
-            max-width: calc(33.3% - ($xxxs * 2 / 3));
-        }
-        &-4{
-    
-            flex: 1 0 25%;
-            max-width: calc(25% - ($xxxs * 3 / 4));
-        }
-        &-5{
-    
-            flex: 1 0 20%;
-            max-width: calc(20% - ($xxxs * 4 / 5));
-        }
-        &-6{
-    
-            flex: 1 0 16.66%;
-            max-width: calc(16.66% - ($xxxs * 5 / 6));
-        }
-    }
-}
-g-xxs{
-    .grid{
-        &-2{
-    
-            flex: 1 0 50%;
-            max-width: calc(50% - ($xxs / 2));
-        }
-        &-3{
-    
-            flex: 1 0 33.33%;
-            max-width: calc(33.3% - ($xxs * 2 / 3));
-        }
-        &-4{
-    
-            flex: 1 0 25%;
-            max-width: calc(25% - ($xxs * 3 / 4));
-        }
-        &-5{
-    
-            flex: 1 0 20%;
-            max-width: calc(20% - ($xxs * 4 / 5));
-        }
-        &-6{
-    
-            flex: 1 0 16.66%;
-            max-width: calc(16.66% - ($xxs * 5 / 6));
-        }
-    }
-
-}
-g-xs{
-    .grid{
-        &-2{
-    
-            flex: 1 0 50%;
-            max-width: calc(50% - ($xs / 2));
-        }
-        &-3{
-    
-            flex: 1 0 33.33%;
-            max-width: calc(33.3% - ($xs * 2 / 3));
-        }
-        &-4{
-    
-            flex: 1 0 25%;
-            max-width: calc(25% - ($xs * 3 / 4));
-        }
-        &-5{
-    
-            flex: 1 0 20%;
-            max-width: calc(20% - ($xs * 4 / 5));
-        }
-        &-6{
-    
-            flex: 1 0 16.66%;
-            max-width: calc(16.66% - ($xs * 5 / 6));
-        }
-    }
-}
-g-s{
-    .grid{
-        &-2{
-    
-            flex: 1 0 50%;
-            max-width: calc(50% - ($s / 2));
-        }
-        &-3{
-    
-            flex: 1 0 33.33%;
-            max-width: calc(33.3% - ($s * 2 / 3));
-        }
-        &-4{
-    
-            flex: 1 0 25%;
-            max-width: calc(25% - ($s * 3 / 4));
-        }
-        &-5{
-    
-            flex: 1 0 20%;
-            max-width: calc(20% - ($s * 4 / 5));
-        }
-        &-6{
-    
-            flex: 1 0 16.66%;
-            max-width: calc(16.66% - ($s * 5 / 6));
-        }
-    }
-}
-g-m{
-    .grid{
-        &-2{
-    
-            flex: 1 0 50%;
-            max-width: calc(50% - ($m / 2));
-        }
-        &-3{
-    
-            flex: 1 0 33.33%;
-            max-width: calc(33.3% - ($m * 2 / 3));
-        }
-        &-4{
-    
-            flex: 1 0 25%;
-            max-width: calc(25% - ($m * 3 / 4));
-        }
-        &-5{
-    
-            flex: 1 0 20%;
-            max-width: calc(20% - ($m * 4 / 5));
-        }
-        &-6{
-    
-            flex: 1 0 16.66%;
-            max-width: calc(16.66% - ($m * 5 / 6));
-        }
-    }
-}
-g-l{
-    .grid{
-        &-2{
-    
-            flex: 1 0 50%;
-            max-width: calc(50% - ($l / 2));
-        }
-        &-3{
-    
-            flex: 1 0 33.33%;
-            max-width: calc(33.3% - ($l * 2 / 3));
-        }
-        &-4{
-    
-            flex: 1 0 25%;
-            max-width: calc(25% - ($l * 3 / 4));
-        }
-        &-5{
-    
-            flex: 1 0 20%;
-            max-width: calc(20% - ($l * 4 / 5));
-        }
-        &-6{
-    
-            flex: 1 0 16.66%;
-            max-width: calc(16.66% - ($l * 5 / 6));
-        }
-    }
-}
-g-xl{
-    .grid{
-        &-2{
-    
-            flex: 1 0 50%;
-            max-width: calc(50% - ($xl / 2));
-        }
-        &-3{
-    
-            flex: 1 0 33.33%;
-            max-width: calc(33.3% - ($xl * 2 / 3));
-        }
-        &-4{
-    
-            flex: 1 0 25%;
-            max-width: calc(25% - ($xl * 3 / 4));
-        }
-        &-5{
-    
-            flex: 1 0 20%;
-            max-width: calc(20% - ($xl * 4 / 5));
-        }
-        &-6{
-    
-            flex: 1 0 16.66%;
-            max-width: calc(16.66% - ($xl * 5 / 6));
-        }
-    }
-}
-g-xxl{
-    .grid{
-        &-2{
-    
-            flex: 1 0 50%;
-            max-width: calc(50% - ($xxl / 2));
-        }
-        &-3{
-    
-            flex: 1 0 33.33%;
-            max-width: calc(33.3% - ($xxl * 2 / 3));
-        }
-        &-4{
-    
-            flex: 1 0 25%;
-            max-width: calc(25% - ($xxl * 3 / 4));
-        }
-        &-5{
-    
-            flex: 1 0 20%;
-            max-width: calc(20% - ($xxl * 4 / 5));
-        }
-        &-6{
-    
-            flex: 1 0 16.66%;
-            max-width: calc(16.66% - ($xxl * 5 / 6));
-        }
-    }
-}
-g-xxxl{
-    .grid{
-        &-2{
-    
-            flex: 1 0 50%;
-            max-width: calc(50% - ($xxxl / 2));
-        }
-        &-3{
-    
-            flex: 1 0 33.33%;
-            max-width: calc(33.3% - ($xxxl * 2 / 3));
-        }
-        &-4{
-    
-            flex: 1 0 25%;
-            max-width: calc(25% - ($xxxl * 3 / 4));
-        }
-        &-5{
-    
-            flex: 1 0 20%;
-            max-width: calc(20% - ($xxxl * 4 / 5));
-        }
-        &-6{
-    
-            flex: 1 0 16.66%;
-            max-width: calc(16.66% - ($xxxl * 5 / 6));
-        }
-    }
-}
